@@ -70,7 +70,7 @@ blockDescS :: Int -> [(Pos2D, Int, Maybe PowerUpKind)]
 blockDescS 0 = map (first3 adjustPos) allBlocks
 
  where allBlocks :: [((Int, Int), Int, Maybe PowerUpKind)]
-       allBlocks = [((x,y), maxBlockLife, Nothing) | x <- [0..blockColumns - 1]
+       allBlocks = [((x,y), minBlockLife, Just DestroyUp) | x <- [0..blockColumns - 1]
                                                     , y <- [0..blockRows - 1]
                    ]
 
