@@ -1,3 +1,7 @@
+2017-11-28 Christina Zeller <chriz@keera.co.uk>:
+        * Adds two more kinds of powerups (levels down & nothing happens)
+        * Adds and changes images for powerups.
+
 2017-11-26 Christina Zeller <chriz@keera.co.uk>:
         * Adds levels with powerups.
 
